--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,4 +1,4 @@
-name: Cypress Tests
+name: Run Cypress Tests
 
 on:
   push:
@@ -9,22 +9,20 @@ on:
       - main
 
 jobs:
-  cypress:
+  cypress-run:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '18'
 
       - name: Install dependencies
-        run: |
-          npm install
+        run: npm ci
 
-      - name: Run Cypress Tests
-        run: |
-          npx cypress run
+      - name: Run Cypress tests
+        uses: cypress-io/github-action@v4
